:sparkles: :memo: add Get, Add, Update, Delete Menu/MenuItems
